--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon-32x32.png" sizes="32x32" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>Frontend Mentor | Pricing Component with Toggle</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body
+    class="min-h-screen | flex items-center justify-center | bg-slate-100 text-slate-700 font-montserrat"
+  >
+    <div class="py-16 | flex flex-col gap-20 | lg:pb-20" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
